# csbot

./: .env.prod.example  .gitignore  LICENSE  README.md  alembic.ini  archive_tool.py  bot.py  bot_minimal.py  docker-compose.yml  fix.py  get_img_tool.py  homework_plot_tool.py  matches.html  pyproject.toml  qianyi.py  qwq.html  rank.html  requirement.txt  requirements.txt  resize_avatars.py
assets/: 2025-budapest-playoffs.json  2025-budapest-stage1.json  2026-cologne-playoffs.json  2026-cologne-stage1.json  2026-cologne-stage2.json  2026-cologne-stage3.json  2026-cologne-stage3.template.json  budapest-stage1.json  budapest-stage2.json  budapest-stage3.json  data.html  default.conf  dict.txt  market.html  matches.html  teammate.html
mymigrations/: env.py
mymigrations/versions/: 20260706_add_faceit_tables.py  2708b787750d_.py  50cc623064f9_.py  a13f11ab1c0e_.py  bc030c886a06_.py  c21df6155654_.py  de501b7cf01e_.py  fbb4c127e88e_.py
plugins/admin_tool/: __init__.py
plugins/admintool/: __init__.py
plugins/allmsg/: __init__.py  config.py
plugins/blocker/: __init__.py  config.py
plugins/chat_history/: __init__.py  config.py
plugins/cs/: __init__.py  config.py
plugins/cs_ai/: __init__.py  config.py
plugins/cs_db/: __init__.py
plugins/cs_db_upd/: __init__.py  config.py
plugins/cs_db_val/: __init__.py  config.py
plugins/cs_img/: __init__.py
plugins/cs_report/: __init__.py  config.py
plugins/cs_server/: __init__.py  config.py
plugins/cs_watcher/: __init__.py  config.py
plugins/fudu/: __init__.py  config.py
plugins/hltv_watcher/: __init__.py  config.py  get5e.py  gethltv.py
plugins/live_watcher/: __init__.py  config.py
plugins/major_hw/: __init__.py  config.py  gen_win_matrix.py  playoff_homework.py  simulate.py  verify.py
plugins/market/: __init__.py  config.py
plugins/market2/: __init__.py
plugins/models/: __init__.py
plugins/pic/: __init__.py
plugins/restart/: __init__.py
plugins/small_funcs/: __init__.py  config.py
plugins/steam_guard/: __init__.py  config.py
plugins/ts/: __init__.py  config.py
plugins/utils/: __init__.py  config.py
plugins/wordcloud/: __init__.py  config.py
scripts/: DEPLOY.md  MAJOR_STAGE.md  apply_major_result_files.py  backfill_chat_history.py  backfill_current_major_hw_snapshots.py  bak.sh  check_type.sh  copy_db.sh  create_chat_history_tables.py  create_major_snapshot_tables.py  deploy_backend.ps1  generate_major_stage.py  rebuild_chat_history_groups.py  recalculate_major_stage_results.py  restart.sh  save_major_snapshot.py  stop.sh  sync.sh  upgrade.sh  upgrade_chat_history_tokens.py  watch_stage_verify.mjs
tools/: archive.py  export_message.py  homework_plot.py  major_simulator.cpp  production_image_gallery.py
