[project]
name = "test"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "jieba>=0.42.1",
    "meme-generator>=0.2.2",
    "msgpack>=1.1.2",
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot2[fastapi]>=2.4.3",
    "openai>=2.6.1",
    "psutil>=7.1.2",
    "pyppeteer>=2.0.0",
    "ts3>=2.0.0b2",
    "wordcloud>=1.9.4",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = []
builtin_plugins = []

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
